codegen/ui_tests/export_fn_cfg.stderr
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-13fbbdaa684db49e.rmeta'
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-1b00becb051b9b4f.rmeta'
error: `cfg` attributes are not allowed for `export_fn`
 --> ui_tests/export_fn_cfg.rs:9:1
  |
9 | #[cfg(not(feature = "foo"))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find function `test_fn` in this scope
  --> ui_tests/export_fn_cfg.rs:20:8
   |
20 |     if test_fn(n) {
   |        ^^^^^^^ not found in this scope
